syntax = "proto3";

package pb;

option go_package = "github.com/ebukacodes21/soleluxury-server/pb";

message UpdateBillboardRequest {
    int64 id = 1;
    int64 store_id = 2;
    string label = 3;
    string image_url = 4;
}

message UpdateBillboardResponse {
    string message = 1;
}